--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-select": "^5.7.7",
-    "uuid": "^9.0.1",
     "react-select-async-paginate": "^0.7.3",
     "react-time-ago": "^7.2.1",
     "sharp": "^0.32.6",
-    "swiper": "^11.0.5"
-
+    "socket.io-client": "^4.7.5",
+    "swiper": "^11.0.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@fontsource/inter": "^5.0.14",
