INCT-268 some fix

--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@reduxjs/toolkit": "1.9.7",
     "@types/swiper": "6.0.0",
     "@types/uuid": "9.0.7",
-    "axios": "1.5.0",
+    "axios": "^1.5.0",
     "date-fns": "2.30.0",
     "framer-motion": "10.16.4",
     "get-orientation": "1.1.2",
     "jwt-decode": "4.0.0",
     "lucide-react": "0.289.0",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "nprogress": "0.2.0",
     "react": "18.2.0",
     "react-avatar-edit": "1.2.0",
@@ -80,7 +80,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "eslint-plugin-storybook": "0.6.15",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.29",
     "prettier": "3.0.3",
     "react-google-recaptcha": "3.1.0",
     "sass": "1.69.4",
