--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.8",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -27,6 +28,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "get-orientation": "^1.1.2",
+    "graphql": "^16.9.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.289.0",
     "next": "^13.4.19",
@@ -44,6 +46,7 @@
     "react-time-ago": "^7.2.1",
     "sharp": "^0.32.6",
     "socket.io-client": "^4.7.5",
+    "subscriptions-transport-ws": "^0.11.0",
     "swiper": "^11.0.5",
     "uuid": "^9.0.1"
   },
