--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "NEXT_PRIVATE_LOCAL_WEBPACK=true next dev",
+    "build": "NEXT_PRIVATE_LOCAL_WEBPACK=true next build",
     "build:production": "npm run build",
     "start": "next start",
     "lint": "next lint",
@@ -49,7 +49,8 @@
     "socket.io-client": "^4.7.5",
     "subscriptions-transport-ws": "^0.11.0",
     "swiper": "^11.0.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "webpack": "^5.94.0"
   },
   "devDependencies": {
     "@fontsource/inter": "^5.0.14",
