--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
 
-  listen        3162;
+  listen        3534;
   server_name   localhost;
   access_log    /var/log/nginx/host.access.log;
   error_log /var/log/nginx/host.error.log;
@@ -53,7 +53,7 @@ server {
        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
        add_header 'Access-Control-Allow-Credentials' 'true' always;
        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-       add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-FollowersAndFollowing,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+       add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
 
   }
 }
